--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             margin-top: 10px; 
         }
         img {
-            width: 200px; /* Ajusta el tamaño del logo */
-            margin-bottom: 10px; /* Ajusta el margen inferior del logo */
+            width: 250px; /* Ajusta el tamaño del logo */
+            margin-bottom: 5px; /* Ajusta el margen inferior del logo */
         }
         .boton {
             background-color: rgba(128, 128, 128, 0.5); /* Color de fondo semi-transparente */
@@ -46,17 +46,17 @@
         .boton:hover {
             background-color: rgba(128, 128, 128, 0.7); /* Color de fondo más oscuro al pasar el mouse */
         }
-        /* Estilo para los íconos */
+      
         .icono {
             width: 20px; /* Tamaño deseado para los íconos */
             margin-right: 5px; /* Espacio entre el ícono y el texto */
             vertical-align: middle; /* Alineación vertical */
         }
         .footer-text {
-            font-size: 20px; /* Tamaño de fuente más grande */
-            margin-top: 10px; /* Espacio superior */
-            color: red; /* Color de texto rojo */
-            font-family: 'Lumios Marker', cursive; /* Fuente 'Lumios Marker' */
+            font-size: 20px; 
+            margin-top: 10px; 
+            color: white; 
+            font-family: 'Lumios Marker', cursive; 
         }
     </style>
 </head>
@@ -75,9 +75,8 @@
             </a>
         </div>
         <a href="https://drive.google.com/file/d/19sVjnZO3w3CjQb65kbrh7D8B7uTgOwww/view?usp=sharing" class="boton">
-            <img src="brochure.png" alt="Icono Brochure" class="icono"> Brochure
+            <img src="brochure.png" alt="Icono Brochure" class="icono"> ¿Quienes Somos?
         </a>
-        <a href="https://drive.google.com/file/d/456/view?usp=sharing" class="boton">Descargar PDF 2</a>
         <p class="footer-text">Tu destino comienza con nosotros</p>
     </div>
 </body>
